# opentelemetry_wrapper

./: README.md  TODO.md  experiment_exception_stacktrace.py  experiment_otel_logging.py  fastapi_main.py  get_function_name.py  introspect.py  log_weird_things.py  next_version_intended_usage.py  opentelemetry-prometheus-output-example.txt  pyproject.toml  requirements.txt  setup_otel_logging.py  sqlalchemy_example.py
aaaa/: bbbb.py
opentelemetry_wrapper/: README.md  __init__.py  config.py  instrument_dataclasses.py  instrument_decorator.py  instrument_fastapi.py  instrument_logging.py  instrument_requests.py  instrument_sqlalchemy.py
opentelemetry_wrapper/config/: config.py  header_attributes.py  log_level.py  otel_exporter_otlp.py  otel_exporter_otlp_header.py  otel_header_attributes.py  otel_headers.py  otel_log_level.py  otel_service_name.py  otel_wrapper_prometheus_exporter.py  service_name.py
opentelemetry_wrapper/dependencies/fastapi/: fastapi_prometheus.py  fastapi_typedef.py  starlette_request_hook.py
opentelemetry_wrapper/dependencies/opentelemetry/: instrument_dataclasses.py  instrument_decorator.py  instrument_fastapi.py  instrument_logging.py  instrument_requests.py  instrument_sqlalchemy.py  (+4 more)
opentelemetry_wrapper/utils/: extract_json_header.py  introspect.py  json_encoder.py  logging_json_formatter.py  tracers.py
otel_instrumentation/: README.md  __init__.py  config.py  instrument_dataclasses.py  instrument_decorator.py  instrument_fastapi.py  instrument_logging.py  instrument_requests.py  utils.py
otel_instrumentation/utils/: introspect.py  tracers.py
(+22 files in other folders)
